# runsushi

./: .gitignore  LICENSE  README.md  default.nix  input_template.in  package.yaml  release.nix  runsushi.cabal  shell.nix  stack.yaml
nix/: h2decays.nix
src/: parsetest.hs  runsushi.hs  runsushiHpW.hs
src/Data/HEP/: SLHA.hs
src/Data/HEP/THDM/: Model.hs
src/HEP/Data/: SLHA.hs  THDM.hs  Util.hs
src/HEP/Data/SUSHI/: THDM.hs  Util.hs
src/HEP/Data/SUSHI/THDM/: BranchingRatio.hs  CrossSection.hs  Model.hs
src/HEP/Data/THDM/: CrossSection.hs  Model.hs
