cabal-version:       2.2
name:                runsushi
version:             0.0.0.0
synopsis:            For processing inputs and outputs of SusHi
-- description:
homepage:            https://github.com/cbpark/runsushi
bug-reports:         https://github.com/cbpark/runsushi/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          cbpark@gmail.com
copyright:           (c) 2020 Chan Beom Park
category:            Physics
extra-source-files:  README.md

executable runsushi
  main-is:             runsushi.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat